Archive2/69/7a50a5e979a555/output
In file included from /usr/include/c++/4.8/thread:39:0,
                 from main.cpp:2:
/usr/include/c++/4.8/functional: In instantiation of 'struct std::_Bind_simple<void (*(int))(int&)>':
/usr/include/c++/4.8/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(int&); _Args = {int&}]'
main.cpp:14:34:   required from here
/usr/include/c++/4.8/functional:1697:61: error: no type named 'type' in 'class std::result_of<void (*(int))(int&)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/include/c++/4.8/functional:1727:9: error: no type named 'type' in 'class std::result_of<void (*(int))(int&)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
